--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 .cabecalho {
   background-color: var(--cor-terciaria);
-  color: var(--cor-secundaria);
+  
   padding: 5px;
   text-align: center;
   display: flex;
@@ -15,7 +15,7 @@
 
 .cabecalho__menu__link {
   font-family: 'SegoeUI';
-  color: var(--cor-secundaria);
+  color: black;
   font-weight: normal;
   /* padding: 0% 2% 0% 0%; */
   text-decoration: none;
