DetailsList -Botoes,ordenacao e funcionalidade no delete
- Continuação criação DetailsList
    - Inclusão botões (delete, EDIT e Nova Imagem) → por hora sem função
    - Implementação de Ordenação pelo Header (coluna Ordem ainda está visível)
        - Removida posteriormente e forçada ordenação pelo Fetch
    - Implementada funcionalidade no botão de exclusão
        - Implementado update após delete com uso the filtro no [state]

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .cabecalho {
   background-color: var(--cor-terciaria);
   
-  padding: 5px;
+  padding: 20px 20px 20px 20px;
   text-align: center;
   display: flex;
   justify-content: space-between;
@@ -24,7 +24,7 @@
 .cabecalho__logo {
   display: flex;
   flex: 0.1; 
-  max-height: 40px;
+  max-height: 30px;
 }
 
 nav {
