--- a/src/Slider.css
+++ b/src/Slider.css
@@ -100,3 +100,22 @@
 }
 
 
+.dots-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  .dot {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: lightgray;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+  
+  .dot.active {
+    background-color: darkgray;
+  }
+  
